Add default tooltip until i18n-ed

--- a/src/logger-ui.html
+++ b/src/logger-ui.html
@@ -84,7 +84,7 @@
                 </span>
             </div>
             <div>
-                <button id="logLevel" class="iconified notext" data-i18n-title="loggerLogLevelTip" type="button"><span class="fa-icon">volume-up</span><span class="hover"></span></button>
+                <button id="logLevel" class="iconified notext" title="Toggle verbose mode" type="button"><span class="fa-icon">volume-up</span><span class="hover"></span></button>
             </div>
             <div>
                 <button id="loggerStats" class="iconified notext" style="display: none;"><span class="fa-icon">bar-chart</span><span class="hover"></span></button>
