--- a/src/devtools.html
+++ b/src/devtools.html
@@ -29,8 +29,8 @@
         <button id="snfe-todnr" type="button">SNFE: DNR<span class="hover"></span></button>
         <button id="snfe-benchmark" type="button" disabled>SNFE: Benchmark<span class="hover"></span></button>
         <button id="cfe-dump" type="button">CFE: Dump<span class="hover"></span></button>
-        <button id="cfe-benchmark" type="button">CFE: Benchmark<span class="hover"></span></button>
-        <button id="sfe-benchmark" type="button">SFE: Benchmark<span class="hover"></span></button>
+        <button id="cfe-benchmark" type="button" disabled>CFE: Benchmark<span class="hover"></span></button>
+        <button id="sfe-benchmark" type="button" disabled>SFE: Benchmark<span class="hover"></span></button>
         <button id="purge-all-caches" type="button" data-i18n-title="3pPurgeAll"><span data-i18n="3pPurgeAll">_</span><span class="hover"></span></button>
 </div>
 <div id="console" class="codeMirrorContainer"></div>
