More fine-tuning of element picker visual/behavior
- Group "Pick" and "Preview"
- Set minimal button width
- Auto-minimize when picking instead of fully hiding the dialog:
  this allows to quit while in picking mode

--- a/src/web_accessible_resources/epicker-ui.html
+++ b/src/web_accessible_resources/epicker-ui.html
@@ -35,8 +35,10 @@
         </div>
     </div>
     <div id="toolbar">
-        <button id="pick" type="button" data-i18n="pickerPick">_<span class="hover"></span></button>
-        <button id="preview" type="button" data-i18n="pickerPreview">_<span class="hover"></span></button>
+        <div>
+            <button id="pick" type="button" data-i18n="pickerPick">_<span class="hover"></span></button>
+            <button id="preview" type="button" data-i18n="pickerPreview">_<span class="hover"></span></button>
+        </div>
         <button id="create" type="button" class="preferred" disabled data-i18n="pickerCreate">_<span class="hover"></span></button>
     </div>
 </section>
