Keep search input field visuals consistent
Related feedback:
https://github.com/uBlockOrigin/uBlock-issues/issues/3161#issuecomment-1992340127

--- a/src/3p-filters.html
+++ b/src/3p-filters.html
@@ -44,7 +44,7 @@
     <div class="rootstats expandable" data-key="*">
         <span class="fa-icon listExpander">angle-up</span><span id="listsOfBlockedHostsPrompt"></span>
     </div>
-    <div class="searchbar"><input type="search" spellcheck="false"/><span class="fa-icon">search</span></div>
+    <div class="searchfield"><input type="search" spellcheck="false" placeholder="" /><span class="fa-icon">search</span></div>
     <div class="listEntries"></div>
     <div class="li listEntry expandable" data-role="import">
         <span class="detailbar">
