Make syntax errors more visible
Related issue:
https://github.com/uBlockOrigin/uBlock-issues/issues/992#issuecomment-2002586019

--- a/src/dyna-rules.html
+++ b/src/dyna-rules.html
@@ -40,7 +40,7 @@
 <div id="ruleFilter">
     <span><span class="fa-icon">filter</span>&nbsp;<input type="search" size="16"></span>&emsp;<span data-i18n="rulesSort"></span>&nbsp;<select><option value="0" selected data-i18n="rulesSortByType"><option value="1" data-i18n="rulesSortBySource"><option value="2" data-i18n="rulesSortByDestination"></select>&emsp;<span id="diffCollapse" class="fa-icon">double-angle-up</span>
 </div>
-<div class="codeMirrorContainer codeMirrorMergeContainer"></div>
+<div class="codeMirrorContainer codeMirrorMergeContainer cm-theme-override"></div>
 
 <div id="templates" style="display: none;">
     <input class="hidden" id="importFilePicker" type="file" accept="text/plain">
