Offer ability to skip redirects in strict-blocked page
Related discussion:
https://github.com/uBlockOrigin/uBlock-issues/issues/3206#issuecomment-2439639215

If a strict-blocked page matches a `urlskip=` filter, the page
will show the user the destination URL as a result of applying the
`urlskip` filter should they choose to proceed with the
navigation.

--- a/src/document-blocked.html
+++ b/src/document-blocked.html
@@ -33,6 +33,9 @@
         </div>
     </div>
 
+    <div id="urlskip" hidden>
+    </div>
+
     <div class="li">
         <label><span class="input checkbox"><input type="checkbox" id="disableWarning"><svg viewBox="0 0 24 24"><path d="M1.73,12.91 8.1,19.28 22.79,4.59"/></svg></span><span data-i18n="docblockedDontWarn">_</span></label>
     </div>
@@ -42,13 +45,12 @@
         <button id="bye" data-i18n="docblockedClose" type="button">_<span class="hover"></span></button>
         <button id="proceed" class="preferred" data-i18n="docblockedDisable" type="button"><span class="hover"></span></button>
     </div>
-
-    <div id="templates" style="display: none;">
-        <li class="filterList">
-            <a class="filterListSource" href="asset-viewer.html?url=" target="_blank"></a>&nbsp;<!--
-         --><a class="fa-icon filterListSupport hidden" href="#" target="_blank" rel="noopener noreferrer">home</a>
-        </span>
-    </div>
+</div>
+<div id="templates" style="display: none;">
+    <li class="filterList">
+        <a class="filterListSource" href="asset-viewer.html?url=" target="_blank"></a>&nbsp;<!--
+     --><a class="fa-icon filterListSupport hidden" href="#" target="_blank" rel="noopener noreferrer">home</a>
+    </span>
 </div>
 
 <script src="lib/hsluv/hsluv-0.1.0.min.js"></script>
