[mv3] Code review re. re-worked dashboard
Related commit:
https://github.com/gorhill/uBlock/commit/ae4754415c9a01f18d3219972ef35b959536891f

Fine-tuned visuals; fixed sublist quirks related to admin-selected
lists.

--- a/platform/mv3/extension/dashboard.html
+++ b/platform/mv3/extension/dashboard.html
@@ -101,8 +101,8 @@
     <section data-pane="rulesets">
         <div>
             <p id="listsOfBlockedHostsPrompt"></p>
+            <p><input id="findInLists" type="search" spellcheck="false" placeholder="findListsPlaceholder" /></p>
         </div>
-        <div class="searchfield"><input type="search" spellcheck="false" placeholder="" /><span class="fa-icon">search</span></div>
         <div id="lists"></div>
     </section>
     <!-- -------- -->
