[mv3] Allow copy/paste troubleshooting info

--- a/platform/mv3/extension/report.html
+++ b/platform/mv3/extension/report.html
@@ -16,7 +16,7 @@
 
 <section>
 
-<h3 data-i18n="supportS6H"></h3>
+<h2 data-i18n="supportS6H"></h2>
 <p data-i18n="supportS3P1"></p>
 <div class="supportEntry">
     <hr>
@@ -48,6 +48,12 @@
         <label><span class="input checkbox"><input id="isNSFW" type="checkbox"><svg viewBox="0 0 24 24"><path d="M1.73,12.91 8.1,19.28 22.79,4.59"/></svg></span><span data-i18n="supportS6Checkbox1"></span></label>
     </p>
     <button type="button" data-i18n="supportReportSpecificButton" class="preferred">_<span class="hover"></span></button>
+</div>
+<div style="font-size: smaller;">
+    <hr>
+    <details><summary data-i18n="supportS5H"></summary>
+    <pre style="user-select: all;"></pre>
+    </details>
 </div>
 
 </section>
