[mv3] Fine tune zapper's quit button
Related issue:
https://github.com/uBlockOrigin/uBlock-issues/issues/3587

--- a/platform/mv3/extension/zapper-ui.html
+++ b/platform/mv3/extension/zapper-ui.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<aside style="right: 2px; bottom: 2px;">
+<aside>
     <div id="quit" data-i18n-title="zapperTipQuit">
         <svg viewBox="0 0 64 64"><path d="M16 16L48 48M16 48L48 16" /></svg>
     </div>
