[mv3] Add browser info in troubleshooting data

--- a/platform/mv3/extension/report.html
+++ b/platform/mv3/extension/report.html
@@ -50,7 +50,7 @@
     </p>
     <button type="button" data-i18n="supportReportSpecificButton" class="preferred">_<span class="hover"></span></button>
 </div>
-<div style="font-size: smaller;">
+<div>
     <hr>
     <details><summary data-i18n="supportS5H"></summary>
     <pre style="user-select: all;"></pre>
