[mv3] Safari: warn to not open filter issues for stable Safari
Related issue:
https://github.com/uBlockOrigin/uAssets/issues/28408

Stable Safari is known to not block certain network requests due to
the current state of the DNR engine in Safari. The warning is to
ensure volunteers are not burdened by issues originating from the
browser.

Eventually Safari's DNR implementation will catch up with the
specification, at which time the warning will be removed.

--- a/platform/mv3/extension/report.html
+++ b/platform/mv3/extension/report.html
@@ -10,7 +10,8 @@
 <link rel="stylesheet" href="css/common.css">
 <link rel="stylesheet" href="css/dashboard-common.css">
 <link rel="stylesheet" href="css/fa-icons.css">
-<link rel="shortcut icon" type="image/png" href="img/icon_64.png">
+<link rel="stylesheet" href="css/report.css">
+<link type="image/png" href="img/icon_64.png">
 </head>
 
 <body>
@@ -18,6 +19,7 @@
 <section>
 
 <h2 data-i18n="supportS6H"></h2>
+<p class="safari warning"><b>Safari users:</b> Please do not report filter issues at the moment. The declarativeNetRequest engine on stable version of Safari is not yet fully implemented <a href="https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/API/declarativeNetRequest">as per specs</a>. As a consequence this leads to many cases of network requests not being blocked.</p>
 <p data-i18n="supportS3P1"></p>
 <div class="supportEntry">
     <hr>
