--- a/platform/mv3/extension/report.html
+++ b/platform/mv3/extension/report.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" href="css/dashboard-common.css">
 <link rel="stylesheet" href="css/fa-icons.css">
 <link rel="stylesheet" href="css/report.css">
-<link type="image/png" href="img/icon_64.png">
+<link rel="icon" type="image/png" href="img/icon_64.png">
 </head>
 
 <body>
