--- a/tools/jsonpath-tool.html
+++ b/tools/jsonpath-tool.html
@@ -1,4 +1,13 @@
 <!DOCTYPE html>
+<!--
+
+Requires a local server in root of uBlock repo:
+python3 -m http.server
+
+Then load the following URL in the browser:
+http://localhost:8000/tools/jsonpath-tool.html
+
+-->
 <html>
 <head>
 <meta charset="utf-8">
@@ -43,8 +52,39 @@ main {
 <body>
 <h2>uBO-flavored JSONPath tool</h2>
 <main>
-    <textarea id="json-data" placeholder="JSON data" spellcheck="false"></textarea>
-    <input id="jsonpath-input" placeholder="JSON path expression" spellcheck="false" />
+    <textarea id="json-data" placeholder="JSON data" spellcheck="false">{
+  "store": {
+    "book": [ 
+      { "category": "reference",
+        "author": "Nigel Rees",
+        "title": "Sayings of the Century",
+        "price": 8.95
+      },
+      { "category": "fiction",
+        "author": "Evelyn Waugh",
+        "title": "Sword of Honour",
+        "price": 12.99
+      },
+      { "category": "fiction",
+        "author": "Herman Melville",
+        "title": "Moby Dick",
+        "isbn": "0-553-21311-3",
+        "price": 8.99
+      },
+      { "category": "fiction",
+        "author": "J. R. R. Tolkien",
+        "title": "The Lord of the Rings",
+        "isbn": "0-395-19395-8",
+        "price": 22.99
+      }
+    ],
+    "bicycle": {
+      "color": "red",
+      "price": 19.95
+    }
+  }
+}</textarea>
+    <input id="jsonpath-input" placeholder="JSON path expression" spellcheck="false" value="$..book[?@.price<10]" />
     <div id="jsonpath-result">&nbsp;</div>
 </main>
 
@@ -56,6 +96,18 @@ main {
     // http://localhost:8000/tools/jsonpath-tool.html
 
     import { JSONPath } from '../src/js/jsonpath.js';
+
+    function readJSON() {
+        const textarea = document.querySelector('#json-data');
+        try {
+            jsonData = JSON.parse(textarea.value);
+        } catch {
+            jsonData = {};
+        }
+        if ( typeof jsonData !== 'object' || jsonData === null ) {
+            jsonData = {};
+        }
+    }
 
     function formatResult(a) {
         if ( a === undefined ) { return 'undefined'; }
@@ -85,13 +137,7 @@ main {
     {
         const textarea = document.querySelector('#json-data');
         textarea.addEventListener('input', ( ) => {
-            try {
-                jsonData = JSON.parse(textarea.value);
-            } catch {
-            }
-            if ( typeof jsonData !== 'object' || jsonData === null ) {
-                jsonData = {};
-            }
+            readJSON();
             process();
         });
     }
@@ -102,6 +148,9 @@ main {
             process();
         });
     }
+
+    readJSON();
+    process();
 </script>
 
 </body>
